compiler/tests/fail/param_expansion/x86-64/expression_arg.jazz
param int N = (uint)(64u) 3;

inline fn f (reg u64[N] a) { }
